--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ beginner page</a> where a more conventional approach is proposed.<br>
 It
 seems that everybody can do it using common intuition. It can take some
 time if it's your first try.<br>
-You cube should now look like this:<br>
+Your cube should now look like this:<br>
       <div style="text-align: center;"><br>
       <applet code="ch.randelshofer.rubik.RubikPlayerApp.class" archive="rubikplayer.zip" height="200" width="200"> <param name="beta" value="30"> <param name="backgroundColor" value="0xFFFFFF"> <param name="displayLines" value="0"> <param name="colorTable" value="0x003373,0xff4600,0xf8f8f8,0x00732f,0x8c000f, 0xffd200,0x707070">
       <param name="stickers" value="0,0,0,6,6,6,6,6,6,1,1,1,6,6,6,6,6,6,6,6,6,6,6,6,6,6,6,3,3,3,6,6,6,6,6,6,4,4,4,6,6,6,6,6,6,5,5,5,5,5,5,5,5,5"></applet>
@@ -402,7 +402,7 @@ Two edges again: Green-white and blue-orange.<br>
 Then, the three last edges at a wrong place are moved.<br>
 In the end, two misoriented edges are fixed.<br>
                   <br>
-Once the first layered is completed, everything is based on an
+Once the first layer is completed, everything is based on an
 identical strategy: P.X.Y.X'.Y'.P'.<br>
                   </td>
                   <td style="vertical-align: middle;">&nbsp;<applet code="ch.randelshofer.rubik.RubikPlayerApp.class" archive="/web/20041208083322oe_/http://grrroux.free.fr/begin/rubikplayer.zip" height="400" width="350"><param name="beta" value="30"><param name="backgroundColor" value="0xFFFFFF"> <param name="displayLines" value="7"> <param name="scriptLanguage" value="HarrisENG"> <param name="scriptType" value="Solver"> <param name="script" value="[solve a layer] DR2BR'DBEBL2D'BDB'F'D'FU2\n
